k8s/bazarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  serviceName: bazarr
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: linuxserver/bazarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: mnt-volume
          mountPath: /mnt
        - name: config-volume
          mountPath: /config
        - name: download-volume
          mountPath: /downloads
      volumes:
      - name: mnt-volume
        hostPath:
          path: /mnt
          type: Directory
      - name: config-volume
        hostPath:
          path: /opt/k3s/bazarr/config
          type: DirectoryOrCreate
      - name: download-volume
        hostPath:
          path: /opt/k3s/qbittorrent/downloads
          type: Directory
