k8s/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  clusterIP: None
  selector:
    app: bazarr
  ports:
  - name: bazarr
    port: 8080
    targetPort: 6767
